--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=bank-payment-service
 management.endpoint.health.probes.enabled=true
 management.health.readinessstate.enabled=true
 management.health.livenessstate.enabled=true
+bank.payment.secret.key=${PAYMENT_BANK_SECRET_KEY:bank-payment-service}
